--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,8 +6,8 @@
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_photos">Flickr Photos</string>
     <string name="login_label">Connect to Twitter</string>
-    <string name="title_activity_timeline">TimelineActivity</string>
-    <string name="title_activity_composetweet">ComposeTweetActivity</string>
+    <string name="title_activity_timeline">Timeline</string>
+    <string name="title_activity_composetweet">ComposeTweet</string>
     <string name="foo_label">\@foo</string>
     <string name="name_label">Name</string>
     <string name="time_stamp_label">5 h</string>
@@ -15,6 +15,7 @@
     <string name="tweet_label">Tweet</string>
     <string name="action_compose_tweet">Compose tweet</string>
     <string name="new_tweet_hint">new tweet</string>
+    <string name="title_activity_Profile">Profile</string>
     
 
 </resources>
